changed CSS to use grid CSS and added js for header along with pages for writers articles and log in

--- a/socket-app/views/index.html
+++ b/socket-app/views/index.html
@@ -15,7 +15,7 @@
 		<div id='header'>
 			
 			<div id='titleImage'>
-				<p>titleImage</p>
+				<img src='images/logo.png'></img>
 				
 			</div>
 			
@@ -25,36 +25,135 @@
 			</div>
 			
 			<div id='linksBar'>
+			
 				
-				<div class='link'>
-					<p>link</p>
+				<div class='link' id='home'>
+					<p>Home</p>
 				</div>
 				
-				<div class='link'>
-					<p>link</p>
+				<div class='link' id='article'>
+					<p>Articles</p>
 				</div>
 				
-				<div class='link'>
-					<p>link</p>
+				<div class='link' id='writers'>
+					<p>Writers</p>
 				</div>
 				
-				<div class='link'>
-					<p>link</p>
+				<div class='link' id='login'>
+					<p>Log In</p>
 				</div>
 				
 				
 			</div>
-		
+			
 		</div>
 		
 		<div id='contentPane'>
+		
+			<div class='article' id='article0'>
+				<div class='articleImg'>
+					<img src='images/defaultImage.png'></img>
+				</div>
+				
+				<div class='articleTitle'>
+					<h3>How ___ Affects the ___ industry</h3>
+				
+				</div>
+				
+				<div class='articleDescript'>
+					<p>This is an article description</p>
+				
+				</div>
+			</div>
 			
-			<p id='article'>doo dee doo </p>
+			<div class='article' id='article1'>
+				<div class='articleImg'>
+					<img src='images/defaultImage.png'></img>
+				</div>
+				
+				<div class='articleTitle'>
+					<h3>How ___ Affects the ___ industry</h3>
+				
+				</div>
+				
+				<div class='articleDescript'>
+					<p>This is an article description</p>
+				
+				</div>
+			</div>
+			
+			<div class='article' id='article2'>
+				<div class='articleImg'>
+					<img src='images/defaultImage.png'></img>
+				</div>
+				
+				<div class='articleTitle'>
+					<h3>How ___ Affects the ___ industry</h3>
+				
+				</div>
+				
+				<div class='articleDescript'>
+					<p>This is an article description</p>
+				
+				</div>
+			</div>
+			
+			<div class='article' id='article3'>
+				<div class='articleImg'>
+					<img src='images/defaultImage.png'></img>
+				</div>
+				
+				<div class='articleTitle'>
+					<h3>How ___ Affects the ___ industry</h3>
+				
+				</div>
+				
+				<div class='articleDescript'>
+					<p>This is an article description</p>
+				
+				</div>
+			</div>
+			
+			<div class='article' id='article4'>
+				<div class='articleImg'>
+					<img src='images/defaultImage.png'></img>
+				</div>
+				
+				<div class='articleTitle'>
+					<h3>How ___ Affects the ___ industry</h3>
+				
+				</div>
+				
+				<div class='articleDescript'>
+					<p>This is an article description</p>
+				
+				</div>
+			</div>
+			
+			<div class='article' id='article5'>
+				<div class='articleImg'>
+					<img src='images/defaultImage.png'></img>
+				</div>
+				
+				<div class='articleTitle'>
+					<h3>How ___ Affects the ___ industry</h3>
+				
+				</div>
+				
+				<div class='articleDescript'>
+					<p>This is an article description</p>
+				
+				</div>
+			</div>
+			
+			
+			
 			
 			
 		</div>
 		
 		
 		<script src="scripts/index.js"></script>
+		
 	</body>
 </html>
