--- a/socket-app/public/style/index.css
+++ b/socket-app/public/style/index.css
@@ -3,85 +3,115 @@ body{
 	text-align: center;
 	background-repeat: repeat-y;
 	background-size:100%;
+	display: grid;
+	gird-template-columns: 1fr;
+	grid-gap: 5em;
+	font-family:'Trebuchet MS';
+}
+
+img{
+	max-height:100%;
+	max-width:100%;
 }
 
 
 #header{
-	margin: auto;
-	background-color: #333333;
-	width: 85%;
-	height: 20%;
-	margin-left: 7.5%;
-	position: absolute;
+	display:grid;
+	background-color:white;
+	grid-template-columns: 1fr 3fr;
+	grid-gap: 1em;
+	grid-auto-rows:minmax(100px, auto);
+	padding: 1em;
 }
 
 #titleImage{
-	float: left;
-	display: inline;
-	background-color: #ffe3e3;
-	height: 15%;
-	width:20%;
-	margin-left:10%;
-	margin-right:5%;
-	position:relative;
-	margin-top:2%;
-}
-
-#headImage{
-	color:white;
-	float: right;
-	display:inline;
-	background-color: black;
-	height: 15%;
-	width: 50%;
-	margin-left:5%;
-	margin-right:10%;
-	margin-top:2%;
-	position:relative;
-}
-
-#linksBar{
-	float:left;
-	background-color: #555555;
-	width:85%;
-	position:relative;
-	margin-top:3%;
-	margin-left:7.5%;
-	border-color:black;
-	border-style:solid;
-	border-width:1px;
-}
-
-.link{
-	color:green;
-	float:left;
-	display:inline;
-	margin-right:7.5%;
-	margin-left:7.5%;
-	width:5%;
-	background-color:#555666;
-	border-style:solid;
-	border-width:1px;
-	border-color:black;
+	
+	background-color: whitesmoke;
+	grid-rows:1/2;
+	grid-auto-rows:minmax(100px, auto);
+	
 	
 }
 
-#contentPane{
-	position: absolute;
-	background-color: #333333;
-	width:85%;
-	margin-top:12%;
-	float:bottom;
-	margin-left:7.5%;
-	height:90%;
+#headImage{
+	color:black;
+	background-color: whitesmoke;
+	grid-auto-rows:minmax(100px, auto);
+	
+	
 }
 
-/*
-#ffe3e3
-#ffe6e6
-#ffe8e8
-#ffebeb
-#ffeded
-#fff0f0
-#fff2f2
-*/
+#linksBar{
+	
+	
+	grid-column:1/3;
+	display:grid;
+	grid-template-columns: repeat(4, 1fr);
+	grid-gap: 1em;
+	margin:1em;
+	grid-auto-rows:minmax(50px, auto);
+	border-style:solic;
+	border-color:black;
+	border-width:1em;
+	
+	
+}
+
+.link{
+	color:black;
+	background-color:whitesmoke;
+	self-align:center;
+	
+	grid-auto-rows:minmax(20px, auto);
+}
+
+
+#contentPane{
+	background-color: white;
+	display: grid;
+	grid-template-columns:repeat(3, 1fr);
+	grid-gap:2em;
+	grid-auto-rows:minmax(5em, auto);
+	padding:1em;
+}
+
+.article{
+	display:grid;
+	grid-template-rows:2fr 1fr 2fr;
+	grid-auto-rows:minmax(2em, auto);
+	
+}
+
+.articleImg{
+	background-color:white;
+	justify-self:center;
+}
+
+.articleTitle{
+	background-color:whitesmoke;
+	color:darkGray;
+	justify-self:center;
+	border-bottom-style:solid;
+	border-bottom-color: black;
+	border-bottom-width: 1em;
+}
+
+.articleDescript{
+	background-color:white;
+	justify-self:center;
+}
+
+
+@media only screen 
+ and (min-device-width: 375px) 
+ and (max-device-width: 812px) 
+ and (-webkit-min-device-pixel-ratio: 3) { 
+	#contentPane{
+	background-color: white;
+	display: grid;
+	grid-template-columns:1fr;
+	grid-gap:1em;
+	grid-auto-rows:minmax(5em, auto);
+	}
+}
+
