--- a/socket-app/views/login.html
+++ b/socket-app/views/login.html
@@ -7,7 +7,9 @@
 	<head>
 		<title>Log in</title>
 		
-		<link rel="stylesheet" type = "text/css" href="style/index.css">
+		<link rel="stylesheet" type = "text/css" href="style/login.css">
+		
+		
 	</head>
 	
 	<body >
@@ -48,9 +50,25 @@
 			
 		</div>
 		
-		<div id='contentPane'>
+		<div id='contentPane' >
 		
-			
+			<form id='loginForm' method='POST' action='/register'>
+				
+				<p>Email: </p><input type ="text" name="Email Address:" id='email' class='loginInput'>
+				
+				<p>Username: </p><input type ="text" name="Username:" id='username' class='loginInput'>
+				
+				<p>Password: </p><input type ="password" name="Password:" id='password' class='loginInput'>
+				
+				<p>Confirm Password: </p><input type ="password" name="Confirm Password:" id='confirmPassword' class='loginInput'>
+				<br>
+				<br>
+				<input type='submit' value='Submit'>
+				
+				
+				
+				
+			</form>
 			
 			
 			
@@ -59,7 +77,7 @@
 		</div>
 		
 		
-		<script src="scripts/index.js"></script>
+		<script src="scripts/login.js"></script>
 		
 	</body>
 </html>
